--- a/.github/workflows/daily-task.yml
+++ b/.github/workflows/daily-task.yml
@@ -74,7 +74,7 @@ jobs:
 
     - name: Install dependencies
       if: steps.use-npm-cache.outputs.cache-hit != 'true' || steps.use-npm-depends.outputs.cache-hit != 'true'
-      run: npm install
+      run: npm install --registry=https://registry.npm.taobao.org
        
     # 运行 52pojie 签到任务
     - name: Run 52pojie daily task
