--- a/.github/workflows/daily-task.yml
+++ b/.github/workflows/daily-task.yml
@@ -108,8 +108,8 @@ jobs:
     - name: Run unicom daily task
       if: ${{ env.ENABLE_UNICOM }}
       env:
-        user: ${{secrets.unicom_user}}
-        password: ${{secrets.unicom_password}}
-        appid: ${{secrets.unicom_appid}}
+        user: ${{secrets.user}}
+        password: ${{secrets.password}}
+        appid: ${{secrets.appid}}
       run: node index.js unicom --user=${user} --password=${password} --appid=${appid}
 
